# rs-handlegraph-ffi

./: Cargo.toml  LICENSE  README.md  build.rs  libhandlegraph-panama.java  pom.xml
.github/workflows/: jextract_build.yml  rust_build.yml
src/: lib.rs
src/main/java/: module-info.java
src/main/java/swiss/sib/swissprot/: App.java  libhandlegraph-panama.java
