[package]
name = "rs-handlegraph-ffi"
version = "0.1.0"
authors = ["Jerven bolleman <jerven.bolleman@sib.swiss>"]
edition = "2018"
keywords = ["ffi", "handlegraph", "biohackeu20", "bioinformatics"]

[dependencies]
jni = "0.18.0"
handlegraph = "0.5.0"
gfa = "0.8"

[build-dependencies]
cbindgen = "0.15.0"

[lib]
crate_type = ["cdylib"]
